fix(CSS:buttons): icones et images de fond mal alignés

--- a/src/packages/CSS/Controls/Measures/GPFmeasureLengthStyle.css
+++ b/src/packages/CSS/Controls/Measures/GPFmeasureLengthStyle.css
@@ -5,7 +5,7 @@
 button[id^="GPshowMeasureLengthPicto-"] {
   background-image: url("img/GPmeasuresOpen.png");
   background-repeat: no-repeat;
-  background-position: -26px center;
+  background-position: -24px center;
 }
   
 button[id^="GPshowMeasureLengthPicto-"][aria-pressed="false"] {
