--- a/src/packages/CSS/GPFgeneralWidget.css
+++ b/src/packages/CSS/GPFgeneralWidget.css
@@ -50,7 +50,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  /* crée un décalage sur le searchEngine */
+  /* align-items: center; */
   min-width: var(--size-per-row);
   min-height: var(--size-per-row);
   padding: 5px;
